[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://FinalBoard.gd" id="1_script"]

[node name="FinalBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.129412, 0.243137, 0.95)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.270588, 0.376471, 1)
theme_override_font_sizes/font_size = 48
text = "WIELKI FINAŁ"
horizontal_alignment = 1

[node name="InfoBox" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TimerLabel" type="Label" parent="CenterContainer/InfoBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "30.0 s"
horizontal_alignment = 1

[node name="TotalScore" type="Label" parent="CenterContainer/InfoBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 32
text = "SUMA: 0"
horizontal_alignment = 1

[node name="CurrentQ" type="Label" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Treść pytania..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RowsContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Message" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "..."
horizontal_alignment = 1
